--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "unist",
     "util"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "es6-map": "^0.1.3"
+  },
   "devDependencies": {
     "tape": "^4.4.0",
     "unist-builder": "^1.0.1",
