--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "util"
   ],
   "dependencies": {
-    "es6-map": "^0.1.3"
+    "es6-map": "^0.1.3",
+    "unist-util-is": "^1.0.0"
   },
   "devDependencies": {
     "tape": "^4.4.0",
