--- a/package.json
+++ b/package.json
@@ -2,19 +2,7 @@
   "name": "unist-util-index",
   "version": "1.0.0",
   "description": "Index Unist nodes by property or computed key",
-  "author": "Eugene Sharygin <eush77@gmail.com>",
   "license": "MIT",
-  "scripts": {
-    "test": "tape test/*.js"
-  },
-  "files": [
-    "index.js"
-  ],
-  "homepage": "https://github.com/eush77/unist-util-index",
-  "repository": "eush77/unist-util-index",
-  "bugs": {
-    "url": "https://github.com/eush77/unist-util-index/issues"
-  },
   "keywords": [
     "ast",
     "computed",
@@ -32,6 +20,16 @@
     "unist",
     "util"
   ],
+  "repository": "syntax-tree/unist-util-index",
+  "bugs": "https://github.com/syntax-tree/unist-util-index/issues",
+  "author": "Eugene Sharygin <eush77@gmail.com>",
+  "contributors": [
+    "Eugene Sharygin <eush77@gmail.com>",
+    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+  ],
+  "files": [
+    "index.js"
+  ],
   "dependencies": {
     "es6-map": "^0.1.3",
     "unist-util-is": "^2.0.0"
@@ -40,5 +38,8 @@
     "tape": "^4.4.0",
     "unist-builder": "^1.0.1",
     "unist-util-select": "^1.5.0"
+  },
+  "scripts": {
+    "test": "tape test/*.js"
   }
 }
