--- a/package.json
+++ b/package.json
@@ -32,14 +32,29 @@
   ],
   "dependencies": {
     "es6-map": "^0.1.3",
-    "unist-util-is": "^2.0.0"
+    "unist-util-visit": "^1.4.0"
   },
   "devDependencies": {
+    "prettier": "^1.14.2",
     "tape": "^4.4.0",
     "unist-builder": "^1.0.1",
-    "unist-util-select": "^1.5.0"
+    "unist-util-select": "^1.5.0",
+    "xo": "^0.22.0"
   },
   "scripts": {
+    "format": "prettier --write \"**/*.js\" && xo --fix",
     "test": "tape test/*.js"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "bracketSpacing": false,
+    "semi": false,
+    "trailingComma": "none"
+  },
+  "xo": {
+    "prettier": true,
+    "esnext": false
   }
 }
