Add coverage tests

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "unist-util-visit": "^1.4.0"
   },
   "devDependencies": {
+    "nyc": "^12.0.2",
     "prettier": "^1.14.2",
     "tape": "^4.4.0",
     "unist-builder": "^1.0.1",
@@ -43,7 +44,15 @@
   },
   "scripts": {
     "format": "prettier --write \"**/*.js\" && xo --fix",
-    "test": "node test"
+    "test-api": "node test",
+    "test-coverage": "nyc --reporter lcov tape test.js",
+    "test": "npm run format && npm run test-coverage"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 100,
+    "functions": 100,
+    "branches": 100
   },
   "prettier": {
     "tabWidth": 2,
