--- a/package.json
+++ b/package.json
@@ -37,13 +37,15 @@
   "devDependencies": {
     "nyc": "^12.0.2",
     "prettier": "^1.14.2",
+    "remark-cli": "^5.0.0",
+    "remark-preset-wooorm": "^4.0.0",
     "tape": "^4.4.0",
     "unist-builder": "^1.0.1",
     "unist-util-select": "^1.5.0",
     "xo": "^0.22.0"
   },
   "scripts": {
-    "format": "prettier --write \"**/*.js\" && xo --fix",
+    "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test.js",
     "test": "npm run format && npm run test-coverage"
@@ -65,5 +67,10 @@
   "xo": {
     "prettier": true,
     "esnext": false
+  },
+  "remarkConfig": {
+    "plugins": [
+      "preset-wooorm"
+    ]
   }
 }
