--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   ],
   "repository": "syntax-tree/unist-util-index",
   "bugs": "https://github.com/syntax-tree/unist-util-index/issues",
+  "funding": {
+    "type": "opencollective",
+    "url": "https://opencollective.com/unified"
+  },
   "author": "Eugene Sharygin <eush77@gmail.com>",
   "contributors": [
     "Eugene Sharygin <eush77@gmail.com>",
