--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "unist-util-index",
   "version": "1.1.1",
-  "description": "Index Unist nodes by property or computed key",
+  "description": "unist utility to index property values or computed keys to nodes",
   "license": "MIT",
   "keywords": [
-    "ast",
+    "unist",
+    "unist-util",
+    "util",
+    "utility",
     "computed",
     "filter",
-    "function",
     "index",
     "indexing",
     "key",
@@ -17,8 +19,7 @@
     "property",
     "subset",
     "tree",
-    "unist",
-    "util"
+    "ast"
   ],
   "repository": "syntax-tree/unist-util-index",
   "bugs": "https://github.com/syntax-tree/unist-util-index/issues",
