--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "unist-util-visit": "^1.4.0"
   },
   "devDependencies": {
-    "nyc": "^14.0.0",
+    "nyc": "^15.0.0",
     "prettier": "^1.0.0",
-    "remark-cli": "^6.0.0",
-    "remark-preset-wooorm": "^5.0.0",
+    "remark-cli": "^7.0.0",
+    "remark-preset-wooorm": "^6.0.0",
     "tape": "^4.0.0",
-    "unist-builder": "^1.0.0",
-    "unist-util-select": "^2.0.0",
-    "xo": "^0.24.0"
+    "unist-builder": "^2.0.0",
+    "unist-util-select": "^3.0.0",
+    "xo": "^0.25.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
@@ -71,6 +71,9 @@
   },
   "xo": {
     "prettier": true,
+    "rules": {
+      "unicorn/prefer-includes": "off"
+    },
     "esnext": false
   },
   "remarkConfig": {
