--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "tape": "^5.0.0",
     "unist-builder": "^2.0.0",
     "unist-util-select": "^3.0.0",
-    "xo": "^0.35.0"
+    "xo": "^0.38.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
@@ -72,6 +72,7 @@
   "xo": {
     "prettier": true,
     "rules": {
+      "unicorn/no-this-assignment": "off",
       "unicorn/prefer-includes": "off"
     },
     "esnext": false
