--- a/package.json
+++ b/package.json
@@ -32,34 +32,31 @@
     "Eugene Sharygin <eush77@gmail.com>",
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
+  "sideEffects": false,
+  "type": "module",
+  "main": "index.js",
   "files": [
     "index.js"
   ],
   "dependencies": {
     "es6-map": "^0.1.0",
-    "unist-util-visit": "^2.0.0"
+    "unist-util-visit": "^3.0.0"
   },
   "devDependencies": {
-    "nyc": "^15.0.0",
+    "c8": "^7.0.0",
     "prettier": "^2.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
-    "unist-builder": "^2.0.0",
-    "unist-util-select": "^3.0.0",
+    "unist-builder": "^3.0.0",
+    "unist-util-select": "^4.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "test-api": "node test",
-    "test-coverage": "nyc --reporter lcov tape test.js",
+    "test-api": "node test.js",
+    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test.js",
     "test": "npm run format && npm run test-coverage"
-  },
-  "nyc": {
-    "check-coverage": true,
-    "lines": 100,
-    "functions": 100,
-    "branches": 100
   },
   "prettier": {
     "tabWidth": 2,
@@ -73,9 +70,10 @@
     "prettier": true,
     "rules": {
       "unicorn/no-this-assignment": "off",
-      "unicorn/prefer-includes": "off"
-    },
-    "esnext": false
+      "unicorn/prefer-includes": "off",
+      "no-var": "off",
+      "prefer-arrow-callback": "off"
+    }
   },
   "remarkConfig": {
     "plugins": [
